syntax = "proto3";

package Net;

// The LAG service definition.
service LagManagement {
  rpc CreateLag (LagIface) returns (Result) {}
  rpc DeleteLag (LagIface) returns (Result) {}

  rpc AddLagMember (LagMember) returns (Result) {}
  rpc RemoveLagMember (LagMember) returns (Result) {}
}

// The request message containing the LAG id.
message LagIface {
  string id = 1;
}

message Port {
    string id = 1;
}

message LagMember {
  LagIface lag_iface = 1;
  repeated Port members = 2;
}

// The response message containing the message if error occured
message Result {
  string error_message = 1;
}
